# CS53600

./: README.md  cs565_part2.py  pyproject.toml
src/cs536/: __init__.py
src/cs536/assigment_2/: iperf3_tcp_client.py
src/cs536/assignment_1/: __init__.py  input.txt  ip_addresses.txt  ping.py  run_assignment_1.py  trace_route.py  traceroute_dennis.py
src/cs536/assignment_1/results/: ip_addresses.txt  ping_results.csv
src/cs536/assignment_2/: __init__.py  congestion_prediction.py  iperf3_tcp_client.py  tcp_stats.py  throughput.py
