[project]
name = "cs536"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "requests>=2.32.4",
    "ruff>=0.14.14",
    "tyro>=1.0.5",
]

[tool.ruff]
line-length = 100
